[project]
name = "montgomery"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "takahiro-maekawa", email = "koma4024@gmail.com" }
]
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=1.24.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
